crates/tapir-script/compiler/src/snapshot_tests/grammar/errors/non_associative_comparison.tapir
var x = 3 == 5 == true;